--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo-fisi.png" alt="Logo de FISI" class="logo-FISI-IZQ">
+            <img src="./img/logo-fisi.png" alt="Logo de FISI" class="logo-FISI-IZQ">
         </div>
         <div class="logo">
-            <img src="/img/logo-unmsm.png" alt="Logo de UNMSM" class="logo-UNMSM-DER">
+            <img src="./img/logo-unmsm.png" alt="Logo de UNMSM" class="logo-UNMSM-DER">
         </div>
     </header>
 
@@ -55,6 +55,6 @@
     <footer>
         <p>&copy; 2023 Empresa. Todos los derechos reservados.</p>
     </footer>
-    <script src="/js/login.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 </html>
